// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Footer Standardised default renders correctly 1`] = `
<test>
  <footer
    class="ecl-footer-standardised"
  >
    <div
      class="ecl-container ecl-footer-standardised__container"
    >
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section1"
      >
        <a
          aria-label="Link to site name"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="/example"
        >
          Site name
        </a>
        <div
          class="ecl-footer-standardised__description"
        >
          This site is managed by the Directorate-General for "DG identification"
        </div>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section2"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Contact us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Contact information of the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Contact information of the DG
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Follow us on
          </div>
          <ul
            class="ecl-footer-standardised__list ecl-footer-standardised__list--inline"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section3"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            About us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Information about the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Information about the DG
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Related sites
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 1"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 1
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 2"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 2
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 3"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 3
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 4"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 4
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 5"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 5
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section6"
      >
        <div
          class="ecl-footer-standardised__content"
        >
          More information on:
        </div>
        <ul
          class="ecl-footer-standardised__list ecl-footer-standardised__list--condensed"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 1"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 1
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 2"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 2
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section7"
      >
        <a
          aria-label="Link to European Commission"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="https://ec.europa.eu/info/index_en"
        >
          European Commission
        </a>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section8"
      >
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Contact the European Commission"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Contact the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Follow the European Commission on social media"
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-standardised__link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Follow the European Commission on social media
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#ui--external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Resources for partners
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section9"
      >
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Language policy"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Language policy
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Cookies"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Cookies
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Privacy policy"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Privacy policy
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Legal notice"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Legal notice
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Brexit content disclaimer"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Brexit content disclaimer
            </a>
          </li>
        </ul>
      </section>
    </div>
  </footer>
</test>
`;

exports[`EC - Footer Standardised default renders correctly in EU 1`] = `
<test>
  <footer
    class="ecl-footer-standardised"
  >
    <div
      class="ecl-container ecl-footer-standardised__container"
    >
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section1"
      >
        <a
          aria-label="Link to Site name"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="/example"
        >
          Site name
        </a>
        <div
          class="ecl-footer-standardised__description"
        >
          This site is managed by 
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            site owner name
          </a>
           and is an official website of the European Union
        </div>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section2"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Contact site name
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Link example"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Link
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Follow us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section3"
      >
        <div
          class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
        >
          Optional links
        </div>
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Link 1"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Link 1
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Link 2"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Link 2
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Link 3"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Link 3
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Link 4"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Link 4
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section6"
      />
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section7"
      >
        <a
          aria-label="European Union"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__logo-link"
          href="/example"
        >
          <img
            alt="European Union logo"
            class="ecl-footer-standardised__logo-image-mobile"
            src="/eu-logo-mobile-en.svg"
            title="European Union"
          />
          <img
            alt="European Union logo"
            class="ecl-footer-standardised__logo-image-desktop"
            src="/eu-en-desktop.svg"
            title="European Union"
          />
        </a>
        <div
          class="ecl-footer-standardised__description"
        >
          Discover more on 
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            europa.eu
          </a>
        </div>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section8"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Contact the EU
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Call this number"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Call us 00 800 6 7 8 9 10 11
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to other telephone options"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Use other telephone options
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to our contact form"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Write us via our contact form
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to local EU offices"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Meet us at a local EU office
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Social media
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link EU social media channels"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Search for EU social media channels
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Legal
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to language policy"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Language policy
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to privacy policy"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Privacy policy
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to legal notice"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Legal notice
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Brexit content disclaimer"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Brexit content disclaimer
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Cookies"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Cookies
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section9"
      >
        <div
          class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
        >
          EU institutions
        </div>
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to local European Parliament"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Parliament
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Council"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Council
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Council of the European Council"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Council of the European Union
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Commission"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link Court of Justice of the European Commission"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Court of Justice of the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Central Bank"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Central Bank
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link European Court of Auditors"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Court of Auditors
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European External Service"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European External Action Service
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Economic and Social Committee"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Economic and Social Committee
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Investment Bank"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Investment Bank
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link Ombudsman"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Ombudsman
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Data Protection Supervisor"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Data Protection Supervisor
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Data Protection Board"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Data Protection Board
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to European Personnel Selection Office"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              European Personnel Selection Office
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Publications Office of the Union"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Publications Office of the European Union
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Agencies"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Agencies
            </a>
          </li>
        </ul>
      </section>
    </div>
  </footer>
</test>
`;

exports[`EC - Footer Standardised default renders correctly with extra attributes 1`] = `
<test>
  <footer
    class="ecl-footer-standardised"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container ecl-footer-standardised__container"
    >
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section1"
      >
        <a
          aria-label="Link to site name"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="/example"
        >
          Site name
        </a>
        <div
          class="ecl-footer-standardised__description"
        >
          This site is managed by the Directorate-General for "DG identification"
        </div>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section2"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Contact us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Contact information of the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Contact information of the DG
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Follow us on
          </div>
          <ul
            class="ecl-footer-standardised__list ecl-footer-standardised__list--inline"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section3"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            About us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Information about the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Information about the DG
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Related sites
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 1"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 1
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 2"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 2
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 3"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 3
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 4"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 4
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 5"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 5
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section6"
      >
        <div
          class="ecl-footer-standardised__content"
        >
          More information on:
        </div>
        <ul
          class="ecl-footer-standardised__list ecl-footer-standardised__list--condensed"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 1"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 1
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 2"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 2
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section7"
      >
        <a
          aria-label="Link to European Commission"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="https://ec.europa.eu/info/index_en"
        >
          European Commission
        </a>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section8"
      >
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Contact the European Commission"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Contact the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Follow the European Commission on social media"
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-standardised__link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Follow the European Commission on social media
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#ui--external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Resources for partners
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section9"
      >
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Language policy"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Language policy
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Cookies"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Cookies
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Privacy policy"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Privacy policy
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Legal notice"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Legal notice
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Brexit content disclaimer"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Brexit content disclaimer
            </a>
          </li>
        </ul>
      </section>
    </div>
  </footer>
</test>
`;

exports[`EC - Footer Standardised default renders correctly with extra class names 1`] = `
<test>
  <footer
    class="ecl-footer-standardised custom-class custom-class--test"
  >
    <div
      class="ecl-container ecl-footer-standardised__container"
    >
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section1"
      >
        <a
          aria-label="Link to site name"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="/example"
        >
          Site name
        </a>
        <div
          class="ecl-footer-standardised__description"
        >
          This site is managed by the Directorate-General for "DG identification"
        </div>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section2"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Contact us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Contact information of the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Contact information of the DG
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Follow us on
          </div>
          <ul
            class="ecl-footer-standardised__list ecl-footer-standardised__list--inline"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                 
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section3"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            About us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Information about the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Information about the DG
              </a>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Related sites
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 1"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 1
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 2"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 2
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 3"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 3
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 4"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 4
              </a>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 5"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 5
              </a>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section6"
      >
        <div
          class="ecl-footer-standardised__content"
        >
          More information on:
        </div>
        <ul
          class="ecl-footer-standardised__list ecl-footer-standardised__list--condensed"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 1"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 1
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 2"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 2
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section7"
      >
        <a
          aria-label="Link to European Commission"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="https://ec.europa.eu/info/index_en"
        >
          European Commission
        </a>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section8"
      >
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Contact the European Commission"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Contact the European Commission
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Follow the European Commission on social media"
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-standardised__link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Follow the European Commission on social media
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#ui--external"
                />
              </svg>
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Resources for partners
            </a>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section9"
      >
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Language policy"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Language policy
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Cookies"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Cookies
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Privacy policy"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Privacy policy
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Legal notice"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Legal notice
            </a>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Brexit content disclaimer"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Brexit content disclaimer
            </a>
          </li>
        </ul>
      </section>
    </div>
  </footer>
</test>
`;

exports[`EC - Footer Standardised default with missing input data and debug enabled it returns the right warning messages 1`] = `
<test>
  <footer
    class="ecl-footer-standardised"
  >
    <div
      class="ecl-container ecl-footer-standardised__container"
    >
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section1"
      >
        <a
          aria-label="Link to site name"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href=""
        >
          Site name
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section2"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Contact us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Contact information of the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Contact information of the DG
              </a>
              <!-- ecl2-compliance: link--standalone -->
              <div
                class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
              >
                <p
                  class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
                >
                  [link--standalone] - ecl compliant
                </p>
              </div>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Follow us on
          </div>
          <ul
            class="ecl-footer-standardised__list ecl-footer-standardised__list--inline"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Facebook"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--facebook"
                  />
                </svg>
                <span
                  class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
                  title="[icon] - ecl compliant"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#notifications--success"
                    />
                  </svg>
                </span>
                 
                <span
                  class="ecl-link__label"
                >
                  Facebook
                </span>
              </a>
              <span
                class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
                title="[link--standalone] - ecl compliant"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#notifications--success"
                  />
                </svg>
              </span>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Twitter"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--twitter"
                  />
                </svg>
                <span
                  class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
                  title="[icon] - ecl compliant"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#notifications--success"
                    />
                  </svg>
                </span>
                 
                <span
                  class="ecl-link__label"
                >
                  Twitter
                </span>
              </a>
              <span
                class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
                title="[link--standalone] - ecl compliant"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#notifications--success"
                  />
                </svg>
              </span>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Linkedin"
                class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-footer-standardised__link"
                href="/example"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs ecl-link__icon"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#branded--linkedin"
                  />
                </svg>
                <span
                  class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
                  title="[icon] - ecl compliant"
                >
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#notifications--success"
                    />
                  </svg>
                </span>
                 
                <span
                  class="ecl-link__label"
                >
                  Linkedin
                </span>
              </a>
              <span
                class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
                title="[link--standalone] - ecl compliant"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#notifications--success"
                  />
                </svg>
              </span>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section3"
      >
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            About us
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Information about the DG"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Information about the DG
              </a>
              <!-- ecl2-compliance: link--standalone -->
              <div
                class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
              >
                <p
                  class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
                >
                  [link--standalone] - ecl compliant
                </p>
              </div>
            </li>
          </ul>
        </section>
        <section
          class="ecl-footer-standardised__section"
        >
          <div
            class="ecl-footer-standardised__title ecl-footer-standardised__title--separator"
          >
            Related sites
          </div>
          <ul
            class="ecl-footer-standardised__list"
          >
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 1"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 1
              </a>
              <!-- ecl2-compliance: link--standalone -->
              <div
                class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
              >
                <p
                  class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
                >
                  [link--standalone] - ecl compliant
                </p>
              </div>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 2"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 2
              </a>
              <!-- ecl2-compliance: link--standalone -->
              <div
                class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
              >
                <p
                  class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
                >
                  [link--standalone] - ecl compliant
                </p>
              </div>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 3"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 3
              </a>
              <!-- ecl2-compliance: link--standalone -->
              <div
                class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
              >
                <p
                  class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
                >
                  [link--standalone] - ecl compliant
                </p>
              </div>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 4"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 4
              </a>
              <!-- ecl2-compliance: link--standalone -->
              <div
                class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
              >
                <p
                  class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
                >
                  [link--standalone] - ecl compliant
                </p>
              </div>
            </li>
            <li
              class="ecl-footer-standardised__list-item"
            >
              <a
                aria-label="Link to Related link 5"
                class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
                href="/example"
              >
                Related link 5
              </a>
              <!-- ecl2-compliance: link--standalone -->
              <div
                class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
              >
                <p
                  class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
                >
                  [link--standalone] - ecl compliant
                </p>
              </div>
            </li>
          </ul>
        </section>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section6"
      >
        <div
          class="ecl-footer-standardised__content"
        >
          More information on:
        </div>
        <ul
          class="ecl-footer-standardised__list ecl-footer-standardised__list--condensed"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 1"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 1
            </a>
            <!-- ecl2-compliance: link--standalone -->
            <div
              class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
            >
              <p
                class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
              >
                [link--standalone] - ecl compliant
              </p>
            </div>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Class name 2"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Class name 2
            </a>
            <!-- ecl2-compliance: link--standalone -->
            <div
              class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
            >
              <p
                class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
              >
                [link--standalone] - ecl compliant
              </p>
            </div>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section7"
      >
        <a
          aria-label="Link to European Commission"
          class="ecl-link ecl-link--standalone ecl-footer-standardised__title"
          href="https://ec.europa.eu/info/index_en"
        />
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [link--standalone] - {{ link.label }} and none of {{ link.icon_position }}, {{ icon.name }}, {{ icon.path }} or {{ icon.type }} can be empty at the same time, an unusable link would be generated otherwise
          </p>
        </div>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section8"
      >
        <ul
          class="ecl-footer-standardised__list"
        >
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Contact the European Commission"
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Contact the European Commission
            </a>
            <!-- ecl2-compliance: link--standalone -->
            <div
              class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
            >
              <p
                class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
              >
                [link--standalone] - ecl compliant
              </p>
            </div>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              aria-label="Link to Follow the European Commission on social media"
              class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-footer-standardised__link"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Follow the European Commission on social media
              </span>
               
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#ui--external"
                />
              </svg>
              <span
                class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
                title="[icon] - ecl compliant"
              >
                <svg
                  aria-hidden="true"
                  class="ecl-icon ecl-icon--xs"
                  focusable="false"
                >
                  <use
                    xlink:href="/icons.svg#notifications--success"
                  />
                </svg>
              </span>
            </a>
            <span
              class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
              title="[link--standalone] - ecl compliant"
            >
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#notifications--success"
                />
              </svg>
            </span>
          </li>
          <li
            class="ecl-footer-standardised__list-item"
          >
            <a
              class="ecl-link ecl-link--standalone ecl-footer-standardised__link"
              href="/example"
            >
              Resources for partners
            </a>
            <!-- ecl2-compliance: link--standalone -->
            <div
              class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
            >
              <p
                class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
              >
                [link--standalone] - ecl compliant
              </p>
            </div>
          </li>
        </ul>
      </section>
      <section
        class="ecl-footer-standardised__section ecl-footer-standardised__section9"
      />
    </div>
  </footer>
  <!-- ecl2-compliance: footer-standardised -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [footer-standardised] -  {{ sections[0].title.link.label }} and {{sections[0].title.link.path }} properties need to be set and filled in as they represent the mandatory site name section. {{ sections[0].description }} property needs to be set and filled in as it represents the mandatory content owner section. The legal navigation section was not found, it is mandatory. The {{ sections[4].title.link.label }} and {{ sections[4].title.link.path }} need to be set and filled in as they represent the mandatory corporate name section.
    </p>
  </div>
</test>
`;
